--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/modificarComprobante.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/modificarComprobante.tex
@@ -4,8 +4,8 @@
 \renewcommand{\caseUseModified}{07/03/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUmodificarComprobante - Modificar comprobante} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor modificar un comprobante existente.} %Resumen
-\renewcommand{\caseUsePeople}{Vendedores: quiere modificar un comprobante existente.} %Actor: Meta
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador modificar un comprobante existente.} %Resumen
+\renewcommand{\caseUsePeople}{Administradores: quiere modificar un comprobante existente.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoComprobantes\ (Buscar avanzado comprobantes).} %Precondiciones
 }
@@ -13,10 +13,10 @@
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El vendedor indica el comprobante que desea modificar.}%1
+    \addCaseUseStep{El administrador indica el comprobante que desea modificar.}%1
     \addCaseUseStep{ZMGestion muestra un formulario autocompletado con el número de comprobante, tipo de comprobante y monto. Siendo requeridos todos los campos.}%2
-    \addCaseUseStep{El vendedor modifica el número de comprobante, tipo de comprobante y monto.}%3
-    \addCaseUseStep{ZMGestion modifica el comprobante con los nuevos valores ingresados por el vendedor.}
+    \addCaseUseStep{El administrador modifica el número de comprobante, tipo de comprobante y monto.}%3
+    \addCaseUseStep{ZMGestion modifica el comprobante con los nuevos valores ingresados por el administrador.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: El número de comprobante y tipo de comprobante ingresados ya existe.}{3} %Flujo alternativo A1.
