--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/modificarComprobante.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/modificarComprobante.tex
@@ -19,7 +19,7 @@
     \addCaseUseStep{ZMGestion modifica el comprobante con los nuevos valores ingresados por el administrador.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El número de comprobante y tipo de comprobante ingresados ya existe.}{3} %Flujo alternativo A1.
+	\newAlternative{A1: El número y tipo de comprobante ingresado ya existe.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje indicando que el comprobante ingresado ya existe.}
     \caseUseRow{El escenario vuelve al punto 2.}
@@ -40,4 +40,4 @@
 
 %DIAGRAMA DE ACTIVIDAD
 %\lineabreak[0]
-\activityDiagram{\caseUseShortName}{Diagrama de actividad - \caseUseName}
+%\activityDiagram{\caseUseShortName}{Diagrama de actividad - \caseUseName}
