--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
@@ -6,7 +6,7 @@
 \renewcommand{\caseUseName}{\CUcrearRemito - Crear remito } %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion crear un remito.} %Resumen
-\renewcommand{\caseUsePeople}{Vendedores: desea crear un remito.} %Actor: Meta
+\renewcommand{\caseUsePeople}{Vendedores: quiere crear un remito.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber iniciado sesión en el sistema y tener el permiso necesario para realizar esta función.} %Precondiciones
 }
@@ -15,14 +15,14 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor accede a la pantalla para crear remitos.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione el tipo de remito (Entrada o Salida), la ubicación, de entrada o salida según corresponda, y los productos cuestion. Indicando que todos los campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione el tipo de remito (Entrada o Salida), la ubicación, de entrada o salida según corresponda, y los productos en cuestión. Indicando que todos los campos son obligatorios.}
     \addCaseUseStep{El vendedor completa los campos requeridos.} 
-    \addCaseUseStep{ZMGestion crea el remito.}
+    \addCaseUseStep{ZMGestion crea el remito con los valores indicados por el vendedor.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El vendedor ha dejado un campo obligatorio vacio.}{2} %Flujo alternativo A1.
+	\newAlternative{A1: El vendedor ha dejado un campo obligatorio vacío.}{2} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 2 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que ha dejado un campo obligatorio vacio.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que ha dejado un campo obligatorio vacío.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
