--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -143,7 +143,7 @@
 			\itemCaseUse{modificarVenta}{Modificar venta}
 			\itemCaseUse{borrarVenta}{Borrar venta}
 			\itemCaseUse{generarOrdenProduccionDesdeVenta}{Generar orden de producción a partir de venta}
-			\itemCaseUse{generarRemitoDesdeVenta}{Generar remito a partir de venta}
+			%\itemCaseUse{generarRemitoDesdeVenta}{Generar remito a partir de venta}
 			\itemCaseUse{crearComprobante}{Crear comprobante} 
 			\itemCaseUse{revisarVenta}{Revisar venta}
 		\end{itemize}
@@ -429,7 +429,7 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/generarOrdenProduccionDesdeVenta.tex}
-			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/generarRemitoDesdeVenta.tex}
+			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/generarRemitoDesdeVenta.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/crearComprobante.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/revisarVenta.tex}
 
