Nuevo descripcion textual de casos de uso

--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/borrarLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/borrarLineaOrdenProduccion.tex
@@ -5,7 +5,7 @@
 \renewcommand{\caseUseModified}{02/03/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUborrarLineaOrdenProduccion\ - Borrar linea de orden de producción.} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador borrar una linea de orden de producción de una orden de producción determinada.} %Resumen
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una linea de orden de producción de una orden de producción determinada.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una linea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasOrdenProduccion (Listar lineas de orden de producción).} %Precondiciones
