--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex
@@ -26,7 +26,7 @@
     \caseUseRow{}
     \newAlternative{A2: El producto, tela y lustre indicado ya se encuentra en la orden de producción.}{3} %Flujo alternativo A2.
     \caseUseRow{La secuencia A2 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe ingresar una cantidad mayor a cero.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que la combinación de producto, tela y lustre ingresado ya se encuentra en la orden de producción.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
     \newAlternative{A3: El tipo de producto seleccionado no es del tipo `Producible'.}{3} %Flujo alternativo A1.
