Nuevo descripciones textuales de casos y cambios en Documentacion

--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarPreciosGrupo.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarPreciosGrupo.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{04/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{04/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUmodificarPreciosGrupo - Modificar precios grupo} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{\CUmodificarPreciosGrupo - {Modificar precios de producto por grupo}} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite modificar de manera proporcional el precio de todos los productos que pertenecen a un determinado grupo de productos.} %Resumen
 \renewcommand{\caseUsePeople}{} %Actor: Meta
