--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/listarLineasPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/listarLineasPresupuesto.tex
@@ -5,7 +5,7 @@
 \renewcommand{\caseUseModified}{04/02/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUlistarLineasPresupuesto - Listar lineas de presupuesto} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor listar las lineas de presupuesto de un presupuesto determinado.} %Resumen
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion listar las lineas de presupuesto de un presupuesto determinado.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere listar las lineas de presupuesto de un presupuesto existente.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoPresupuestos\ (Buscar avanzado presupuestos).} %Precondiciones
