--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/borrarLineaRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/borrarLineaRemito.tex
@@ -7,7 +7,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una linea de remito de un remito determinad.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una linea de remito.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasReito (Listar lineas de remito).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasRemito (Listar lineas de remito).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
