--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
@@ -15,8 +15,9 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor accede a la pantalla para crear remitos.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione el tipo de remito (Entrada o Salida), la ubicación, de entrada o salida según corresponda, y los productos en cuestión. Indicando que todos los campos son obligatorios.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione el tipo de remito (Entrada o Salida), la ubicación, de entrada o salida según corresponda. Indicando que todos los campos son obligatorios.}
     \addCaseUseStep{El vendedor completa los campos requeridos.} 
+    \addCaseUseStep{Si el vendedor desea agregar una linea de remito se ejecuta el \CUcrearLineaRemito (Crear linea de remito). Si el vendedor desea borrar una linea de remito se ejecuta el \CUborrarLineaRemito (Borrar linea de remito). Si el vendedor desea modificar una linea de remito se ejecuta el \CUmodificarLineaRemito (Modificar linea de remito).}
     \addCaseUseStep{ZMGestion crea el remito con los valores indicados por el vendedor.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
@@ -25,7 +26,12 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que ha dejado un campo obligatorio vacío.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-
+    
+    \newAlternative{A2: No se ha agregado ningúna línea de remito.}{4} %Flujo alternativo A1.
+	\caseUseRow{La secuencia A1 comienza luego del punto 4 del escenario principal.} %¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe agregar al menos una línea de remito.}
+    \caseUseRow{El escenario vuelve al punto 4.}
+    \caseUseRow{}
 }
 
 \item Caso de uso \caseUseName
