Nuevo Diagrama de Clases y cambios en Documentacion

--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -495,16 +495,68 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/cancelarTarea.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/ejecutarTarea.tex}
 		\end{enumerate}
-	
-	\subsection{Diagramas de estado}
-	Solo se especificarán los diagramas de estado más relevantes del sistema.
 
-	\stateDiagram{empleados}{Diagrama de estado - Empleados}
-	\stateDiagram{tareas}{Diagrama de estado - Tareas}
-	\stateDiagram{lineasProducto}{Diagrama de estado - Lineas de producto}
-	\stateDiagram{presupuestos}{Diagrama de estado - Presupuestos}
-	\stateDiagram{ventas}{Diagrama de estado - Ventas}
-	\stateDiagram{ordenesProduccion}{Diagrama de estado - Órdenes de producción}
+	\subsection{Diagramas de clases}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/diagramaClases}
+		\caption{Diagrama de clases}
+	\label{fig:Diagrama de clases}
+	\end{figure}
+	\clearpage %salto de pagina
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaSistema}
+		\caption{Diagrama de clases - Vista sistema}
+	\label{fig:Diagrama de clases - Vista sistema}
+	\end{figure}
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaClientes}
+		\caption{Diagrama de clases - Vista clientes}
+	\label{fig:Diagrama de clases - Vista clientes}
+    \end{figure}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaProductos}
+		\caption{Diagrama de clases - Vista productos}
+	\label{fig:Diagrama de clases - Vista productos}
+	\end{figure}
+	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaPresupuestosVentas}
+		\caption{Diagrama de clases - Vista presupuestos y ventas}
+	\label{fig:Diagrama de clases - Vista presupuestos y ventas}
+	\end{figure}
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaProduccion}
+		\caption{Diagrama de clases - Vista producción}
+	\label{fig:Diagrama de clases - Vista producción}
+	\end{figure}
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.60\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaEntregas}
+		\caption{Diagrama de clases - Vista entregas}
+	\label{fig:Diagrama de clases - Vista entregas}
+	\end{figure}
+
+	\clearpage %salto de pagina
+	\subsection{Diagramas de transición de estados}
+	Solo se especificarán los diagramas de transición de estados más relevantes del sistema.
+	\stateDiagram{empleados}{Diagrama de transición de estados - Empleados}
+	\stateDiagram{tareas}{Diagrama de transición de estados - Tareas}
+	\stateDiagram{lineasProducto}{Diagrama de transición de estados - Lineas de producto}
+	\stateDiagram{presupuestos}{Diagrama de transición de estados - Presupuestos}
+	\stateDiagram{ventas}{Diagrama de transición de estados - Ventas}
+	\stateDiagram{ordenesProduccion}{Diagrama de transición de estados - Órdenes de producción}
+	\stateDiagram{remitos}{Diagrama de transición de estados - Remitos}
+	
 		
 	
     
