Cambios en Documentación, Nuevo Capítulo 5

--- a/Informe Final/Capitulo4.tex
+++ b/Informe Final/Capitulo4.tex
@@ -2,5 +2,5 @@
 \label{ch:capitulo4} 
 \markboth{CAPÍTULO \ref*{ch:capitulo4}. Especificación C}{CAPÍTULO \ref*{ch:capitulo4}. Especificación C}
 \input{Capitulos/Capitulo4/cap4sec1.tex}
-%\input{capitulos/capitulo4/cap4sec2.tex}
+\input{capitulos/capitulo4/cap4sec2.tex}
 %\input{capitulos/capitulo4/cap4sec3.tex}
