--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -27,6 +27,7 @@
 		\caption{Diagrama de subsistema detallado}
 	\label{fig:DiagramaSubsistema}
 	\end{figure}
+	\clearpage %salto de pagina
 	\subsection{Listado de casos de uso}
 	\label{sec:listadoCasoUso}
 	\begin{itemize}
@@ -496,7 +497,7 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/ejecutarTarea.tex}
 		\end{enumerate}
 
-	\subsection{Diagramas de clases}
+	\subsection{Diagrama de clases}
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{DiagramaClases/Vistas/diagramaClases}
@@ -541,10 +542,28 @@
 
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=\textwidth,height=0.60\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaEntregas}
+		\includegraphics[width=\textwidth,height=0.4\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaEntregas}
 		\caption{Diagrama de clases - Vista entregas}
 	\label{fig:Diagrama de clases - Vista entregas}
 	\end{figure}
+
+	\subsection{Vista canónica}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaCanonica}
+		\caption{Diagrama de clases - Vista canónica}
+	\label{fig:Modelo de clases - Vista canónica}
+	\end{figure}
+
+	\subsection{Ficha técnica de clases}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{DiagramaClases/Vistas/fichaTecnicaClases}
+		\caption{Diagrama de clases - Ficha técnica de clases}
+	\label{fig:Modelo de clases - Ficha técnica de clases}
+	\end{figure}
+
+	
 
 	\clearpage %salto de pagina
 	\subsection{Diagramas de transición de estados}
