--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/crearEmpleado.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/crearEmpleado.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear empleados}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el usuario ingrese: Nombres, apellidos, correo electrónico, número de teléfono, nombre de usuario, contraseña, fecha de inicio de actividad laboral, cantidad de hijos, estado civil, tipo de documento, documento, teléfono, fecha de nacimiento y rol del empleado que desea agregar. Indicando que son requeridos todos los campos.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el usuario ingrese: Nombres, apellidos, correo electrónico, número de teléfono, nombre de usuario, contraseña, fecha de inicio de actividad laboral, cantidad de hijos, estado civil, tipo de documento, documento, teléfono, fecha de nacimiento, rol del empleado que desea agregar y su ubicación en la cual desempeñara su tarea. Indicando que son requeridos todos los campos.}
     \addCaseUseStep{El administrador completa los campos del formulario.}
     \addCaseUseStep{ZMGestion crea el empleado con los campos ingresados por el usuario y muestra un mensaje indicando el éxito de la operación.}
 }
