--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/modificarEmpleado.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/modificarEmpleado.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador indica el usuario que desea modificar.}
-    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del usuario seleccionado para que el administrador modifique: Nombres, apellidos, correo electrónico, número de teléfono, nombre de usuario, contraseña, fecha de inicio de actividad laboral, cantidad de hijos, estado civil, tipo de documento, documento, teléfono, fecha de nacimiento y/o rol del empleado. Indicando que son requeridos todos los campos.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del usuario seleccionado para que el administrador modifique: Nombres, apellidos, correo electrónico, número de teléfono, nombre de usuario, contraseña, fecha de inicio de actividad laboral, cantidad de hijos, estado civil, tipo de documento, documento, teléfono, fecha de nacimiento, rol del empleado y ubicación en la cual desempeña su tarea. Indicando que son requeridos todos los campos.}
     \addCaseUseStep{El usuario modifica los campos que desea cambiar.}
     \addCaseUseStep{ZMGestion modifica el usuario con los nuevos valores de los campos solicitados.}
 }
