--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/borrarUbicacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/borrarUbicacion.tex
@@ -24,6 +24,11 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que existen productos almacenados en dicha ubicación y por lo tanto no puede ser borrada.}
     \caseUseRow{El escenario vuelve al punto 1.}
     \caseUseRow{}
+    \newAlternative{A2: Existen usuarios que se encuentran desempeñando sus tareas en dicha ubicación.}{1} %Flujo alternativo A1.
+	\caseUseRow{La secuencia A2 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que existen usuarios en dicha ubicación y por lo tanto no puede ser borrada.}
+    \caseUseRow{El escenario vuelve al punto 1.}
+    \caseUseRow{}
 }
 
 
